--- a/v0/style.css
+++ b/v0/style.css
@@ -1,13 +1,62 @@
 body{
     margin: 0px;
-    height: 1200px;
+    height: 2500px;
 }
 
 .Anchor{
     position: relative;
     display: block;
+    width: 100px;
+    height: 100px;
+}
+.Anchor > .box{
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #a5a5a5;
+}
+.Anchor,.Anchor > .box,.Anchor > .box.activeTop,.Anchor > .box.activeBottom{    
+    width: 100px;
+    height: 100px;
+}
+
+.Anchor01,.Anchor01 > .box,.Anchor01 > .box.activeTop,.Anchor > .box.activeBottom{    
+    width: 100%;
+    height: 600px;
+}
+.Anchor01 > .box{
+    background-color: #909090;
+}
+
+.Anchor02,.Anchor02 > .box.activeTop,.Anchor > .box.activeBottom{      
+    width: 100%;
+    height: 600px;
+}
+.Anchor02 > .box{
+    width: 50%;
+    height: 600px;
+    transition: opacity .5s,background-color .5s,width .5s,height .5s;
+}
+.Anchor02 > .box{
+    background-color: #747474;
+}
+.Anchor03{    
+}
+.Anchor03,.Anchor03 > .box,.Anchor03 > .box.activeTop,.Anchor03 > .box.activeBottom{   
     width: 200px;
     height: 120px;
-    background-color: aqua;
-    transition: top 5s;
+}
+.Anchor03 > .box{
+    background-color: #4a4a4a;
+    transition: opacity .5s,background-color .5s,width .5s,height .5s;  
+}
+.Anchor03 > .box.activeTop{
+    width: 400px;
+    background-color: #525252;
+}
+.Anchor03 > .box.activeBottom{
+    width: 100px;
+    height: 100px;
+    background-color: #e2e2e2;
 }
